# vibeCoding

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  HUMAN.md  INSTRUCTIONS.md  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
changelog/: 0001_initial_bootstrap.md  0002_ci_workflow.md  0003_logger_utility.md  0004_architecture_doc.md  0004_language_dirs.md  0004_license.md  0004_secret_scanner.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  logging.md
docs/javascript/: README.md
docs/python/: README.md
src/python/vibecoding/: __init__.py
tests/: test_logging.py  test_sanity.py
vibecoding/: __init__.py  logging.py
