[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecoding"
version = "0.1.0"
description = "AI-assisted development workspace"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VibeCoding Community"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest >= 7.4",
    "black >= 23.7",
    "flake8 >= 6.1",
    "pre-commit >= 3.3"
]

[tool.setuptools]
package-dir = {"" = "src/python"}
packages = ["vibecoding"]
